{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 82,
  "lineage": "621a4970-155e-775f-6602-d40cbb7e38d2",
  "resources": [
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f578f0dce1c7e052",
            "domain": "vpc",
            "id": "eipalloc-0f578f0dce1c7e052",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-196-99.compute-1.amazonaws.com",
            "public_ip": "54.225.196.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox_nat_eip"
            },
            "tags_all": {
              "Name": "sandbox_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee0b129d03d8a5e1",
            "domain": "vpc",
            "id": "eipalloc-0ee0b129d03d8a5e1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-18-34.compute-1.amazonaws.com",
            "public_ip": "52.71.18.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox_nat_eip"
            },
            "tags_all": {
              "Name": "sandbox_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c21b0bb61ff710c",
            "domain": "vpc",
            "id": "eipalloc-04c21b0bb61ff710c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-20-76-222.compute-1.amazonaws.com",
            "public_ip": "23.20.76.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox_nat_eip"
            },
            "tags_all": {
              "Name": "sandbox_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:internet-gateway/igw-0e98d5666b5cc4947",
            "id": "igw-0e98d5666b5cc4947",
            "owner_id": "864672031904",
            "tags": {
              "Name": "sandbox_internet_gw"
            },
            "tags_all": {
              "Name": "sandbox_internet_gw"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f578f0dce1c7e052",
            "connectivity_type": "public",
            "id": "nat-0f0fb93a1cfcd65da",
            "network_interface_id": "eni-0b2c0dc88cc040a8f",
            "private_ip": "172.33.10.221",
            "public_ip": "54.225.196.99",
            "subnet_id": "subnet-0dcce1964c16c7f4c",
            "tags": {
              "Name": "sandbox_nat_gw"
            },
            "tags_all": {
              "Name": "sandbox_nat_gw"
            }
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee0b129d03d8a5e1",
            "connectivity_type": "public",
            "id": "nat-02b1435b721d25228",
            "network_interface_id": "eni-056c5060f95d92cc1",
            "private_ip": "172.33.20.146",
            "public_ip": "52.71.18.34",
            "subnet_id": "subnet-08ed89e7bd0b0ee92",
            "tags": {
              "Name": "sandbox_nat_gw"
            },
            "tags_all": {
              "Name": "sandbox_nat_gw"
            }
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c21b0bb61ff710c",
            "connectivity_type": "public",
            "id": "nat-07184c0fb9af8aafd",
            "network_interface_id": "eni-0435af17a440f2565",
            "private_ip": "172.33.30.85",
            "public_ip": "23.20.76.222",
            "subnet_id": "subnet-0b15063174169545f",
            "tags": {
              "Name": "sandbox_nat_gw"
            },
            "tags_all": {
              "Name": "sandbox_nat_gw"
            }
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lambda_function_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:route-table/rtb-0476d84dd7faef8b2",
            "id": "rtb-0476d84dd7faef8b2",
            "owner_id": "864672031904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0fb93a1cfcd65da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_lambda_function_rt_a"
            },
            "tags_all": {
              "Name": "sandbox_lambda_function_rt_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:route-table/rtb-0b4007357b57cd77e",
            "id": "rtb-0b4007357b57cd77e",
            "owner_id": "864672031904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02b1435b721d25228",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_lambda_function_rt_b"
            },
            "tags_all": {
              "Name": "sandbox_lambda_function_rt_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:route-table/rtb-01c8b5b431822c1f2",
            "id": "rtb-01c8b5b431822c1f2",
            "owner_id": "864672031904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07184c0fb9af8aafd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_lambda_function_rt_c"
            },
            "tags_all": {
              "Name": "sandbox_lambda_function_rt_c"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:route-table/rtb-0616976c6c0f8183c",
            "id": "rtb-0616976c6c0f8183c",
            "owner_id": "864672031904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e98d5666b5cc4947",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_public_rt"
            },
            "tags_all": {
              "Name": "sandbox_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009fdc9af4e0beb60",
            "route_table_id": "rtb-0616976c6c0f8183c",
            "subnet_id": "subnet-0fbbcc9185cc34805"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.private_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02411df22925cc6f7",
            "route_table_id": "rtb-0616976c6c0f8183c",
            "subnet_id": "subnet-0b657fae4139f5eb0"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.private_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b9cbcc4a56c5d8a",
            "route_table_id": "rtb-0616976c6c0f8183c",
            "subnet_id": "subnet-049261e8129bec70d"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.private_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0004df8e964d3f274",
            "route_table_id": "rtb-0616976c6c0f8183c",
            "subnet_id": "subnet-0dcce1964c16c7f4c"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042baa571cdb17d06",
            "route_table_id": "rtb-0616976c6c0f8183c",
            "subnet_id": "subnet-08ed89e7bd0b0ee92"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016222ba187033810",
            "route_table_id": "rtb-0616976c6c0f8183c",
            "subnet_id": "subnet-0b15063174169545f"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:subnet/subnet-0fbbcc9185cc34805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.33.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbbcc9185cc34805",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864672031904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox_private_subnet_a"
            },
            "tags_all": {
              "Name": "sandbox_private_subnet_a"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:subnet/subnet-0b657fae4139f5eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.33.110.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b657fae4139f5eb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864672031904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox_private_subnet_b"
            },
            "tags_all": {
              "Name": "sandbox_private_subnet_b"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:subnet/subnet-049261e8129bec70d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.33.120.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049261e8129bec70d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864672031904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox_private_subnet_c"
            },
            "tags_all": {
              "Name": "sandbox_private_subnet_c"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:subnet/subnet-0dcce1964c16c7f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.33.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcce1964c16c7f4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864672031904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox_public_subnet_a"
            },
            "tags_all": {
              "Name": "sandbox_public_subnet_a"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:subnet/subnet-08ed89e7bd0b0ee92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.33.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ed89e7bd0b0ee92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864672031904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox_public_subnet_b"
            },
            "tags_all": {
              "Name": "sandbox_public_subnet_b"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:subnet/subnet-0b15063174169545f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.33.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b15063174169545f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864672031904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox_public_subnet_c"
            },
            "tags_all": {
              "Name": "sandbox_public_subnet_c"
            },
            "vpc_id": "vpc-032f60d02707e08b7"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "application_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864672031904:vpc/vpc-032f60d02707e08b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.33.0.0/16",
            "default_network_acl_id": "acl-08ce1b83308b87b3d",
            "default_route_table_id": "rtb-068b0c1816874bbc5",
            "default_security_group_id": "sg-07c11f8cfb4895d7d",
            "dhcp_options_id": "dopt-0f7199708ab1757fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-032f60d02707e08b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068b0c1816874bbc5",
            "owner_id": "864672031904",
            "tags": {
              "Name": "sandbox_application_vpc"
            },
            "tags_all": {
              "Name": "sandbox_application_vpc"
            }
          }
        }
      ]
    }
  ]
}